# get

./: Cargo.toml  bump.ps1  config.toml  index.html  profile.ps1  ps.bat  sample.json  script.js  test.md
concepts/: 3d-particle-space (1).html  3d-particle-space (2).html  3d-particle-space (3).html  3d-particle-space (5).html  3d-particle-space (6).html  3d-particle-space (7).html  3d-particle-space (8).html  3d-particle-space (9).html  3d-particle-space.html  av.html  av2.html  av3.html  av4.html  custom_one.html  recode.html  space-simulation (1).html  space-simulation (2).html  space-simulation.html
fix/: right_click.ps1
install/: anydesk.bat  build_essentials.ps1  cmake.ps1  docker.sh  flutter.bat  flutter.ps1  git.sh  github.sh  go.ps1  go.sh  index.html  nvidia.sh  pocketbase.sh  profile.ps1  protoc.ps1  python.ps1  python.sh  rust.sh  script.js  style.css  supabase.sh  textra.ps1
src/: app.rs  chocolatey.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  package_manager.rs  repository.rs  scoop.rs  utils.rs
web/: index.html  script.js
web/assets/: Overpass Mono_Bold.json  Saira Medium_Regular.json
website/: style.css
