[package]
name = "get"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
minimo =  { version = "0.4.3", features = ["async"] }
reqwest = { version = "0.12.4", features = ["stream", "json", "blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4"
zip = "2.1.3"
tokio-util = "0.7.11"
futures = "0.3"
async_zip = { version = "0.0.17", features = ["full"] }
tempfile = "3.10.1"
toml = "0.8.14"
regex = "1.10.5"
url = "2.5.2"
duct = "0.13.7"
colored = "2.1.0"
indicatif = "0.17.8"
